test/negative/206_logical_nonbool.fx
// expect: boolean
val b = 3 && true
println(b)
